--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,7 @@ h2, h3 {
     font-size: 22px;
 }
 
+/*Header Styling*/
 .mainhead {
     background: #ffffff;
     margin: 0 0 30px;
@@ -45,7 +46,6 @@ h2, h3 {
     color: #fff;
     overflow: auto;
     border-bottom: 2px solid #ccc;
-/*    position: fixed;*/
     width: 100%;
 }
 
@@ -76,9 +76,21 @@ h2, h3 {
     line-height: 18px;
 }
 
-.nav-bar a:first-child {
-    border-left: 0 none;
+.nav-bar li a:hover {
+    background-color: #4aaaa5;
 }
+
+.nav-bar a {
+    display: inline;
+    float: left;
+    border-right: 2px solid #bbb;
+}
+
+.nav-bar a:last-child {
+    border-left: none;
+}
+
+/*Main Container Styling*/
 
 .main-container {
     padding-top: 130px;
@@ -127,6 +139,99 @@ h3, .sidebar, h2 {
     margin-top: 8px;
 }
 
+/*Form Styling*/
+
+form label {
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+label {
+    display: block;
+    margin-top: 20px;
+    letter-spacing: 2px;
+}
+
+form {
+    margin: 0 auto;
+    width: 100%;
+/*    padding-left: 60px;
+    padding-right: 40px;*/
+}
+
+input, textarea {
+    width: 500px;
+    background:#efefef;
+    border: 1px solid #dedede;
+    padding:10px;
+    margin-top:3px;
+    /*font-size:0.9em;*/
+    color:#3a3a3a;
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
+    border-radius:5px;
+}
+
+input#submit {
+    background-color: #4aaaa5;
+    width: 127px;
+    height: 38px;
+    border:none;
+    cursor:pointer;
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+    #submit:hover {
+        opacity:.9;
+    }
+
+input:focus, textarea:focus {
+    border:1px solid #97d6eb;
+}
+
+textarea {
+    height:213px;
+}
+
+/*Source: https://www.youtube.com/watch?v=J6YmFApjX1w*/
+
+article {
+    height: 200px;
+    width: 200px;
+    background-color: white;
+    float: left;
+    margin-top: 25px;
+    margin-bottom: 10px;
+    margin-left: 80px;
+    overflow: hidden;
+    position: relative;
+}
+
+article h3 {
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    background-color: #4aaaa5;
+    color: white;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding: 3%;
+    margin-bottom: 10px;
+}
+
+article img {
+    height: 100%;
+    width: auto;
+    position: absolute;
+    border: 2px solid #cccccc;
+}
+
+
+/*Footer Styling*/
 .footer {
     text-align: center;
     display:block;
