--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,40 @@ h2, h3 {
 }
 
 .nav-bar {
+    margin-top: 25px;
+    float: right;
+}
+
+/*.nav-bar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: white;
+}*/
+
+.nav-bar li {
+    float: left;
+    border-right: 1px solid #bbb;
+}
+
+.nav-bar li:last-child {
+    border-right: none;
+}
+
+.nav-bar li a {
+    color: black;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.nav-bar li a:hover {
+    background-color: #4aaaa5;
+}
+
+
+
+/*.nav-bar {
     float: right;
     margin-top: 25px;
 }
@@ -78,7 +112,7 @@ h2, h3 {
 
 .nav-bar li a:hover {
     background-color: #4aaaa5;
-}
+}*/
 
 /*.nav-bar a {
     display: inline;
@@ -102,6 +136,14 @@ h2, h3 {
     max-width: 650px;
     float: left;
     border: 1px solid #ddd;
+}
+
+.container-contact {
+    width: 59%;
+}
+
+.container-portfolio {
+    width: 65;
 }
 
 .profile {
@@ -136,8 +178,6 @@ h3, .sidebar, h2 {
 
 .socialbar img {
     width: 62px;
-    height: 62px;
-    margin-top: 8px;
 }
 
 /*Form Styling*/
